--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <div class="skills">
         <span class="skill">Python</span>
         <span class="skill">C / C++</span>
-        <span class="skill">Design Poster</span>
-        <span class="skill">Editing Video</span>
+        <span class="skill">Poster Design</span>
+        <span class="skill">Video Editing</span>
       </div>
 
       <div style="margin-top:12px">
@@ -81,3 +81,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
